--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
+    "minio": "^8.0.5",
     "mongoose": "^8.5.2",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
