--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@google-cloud/vision": "^5.3.3",
     "@hookform/resolvers": "^3.9.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -23,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "groq-sdk": "^0.32.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
     "minio": "^8.0.5",
