--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "form-data": "^4.0.4",
     "groq-sdk": "^0.32.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.427.0",
